fixed lists to add modal being off center

--- a/frontend/src/components/PostPage/PostPage.css
+++ b/frontend/src/components/PostPage/PostPage.css
@@ -178,9 +178,6 @@ h2.seller-username {
 }
 
 .add-list-post-container {
-    position: fixed;
-    top: 20vh;
-    left: 60vh;
     width: 500px;
     height: 400px;
     border: blue solid 3px;
